--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,10 @@
 /* materialize extensions/overrides */
 
+.pl0, .p0 { padding-left: 0 !important; }
+.pr0, .p0 { padding-right: 0 !important; }
+.pt0, .p0 { padding-top: 0 !important; }
+.pb0, .p0 { padding-bottom: 0 !important; }
+
 .pl1, .p1 { padding-left: 5px !important; }
 .pr1, .p1 { padding-right: 5px !important; }
 .pt1, .p1 { padding-top: 5px !important; }
@@ -15,7 +20,48 @@
 .pt3, .p3 { padding-top: 15px !important; }
 .pb3, .p3 { padding-bottom: 15px !important; }
 
-.m0 { margin: 0 !important; }
+.ml0, .m0 { margin-left: 0 !important; }
+.mr0, .m0 { margin-right: 0 !important; }
+.mt0, .m0 { margin-top: 0 !important; }
+.mb0, .m0 { margin-bottom: 0 !important; }
+
+.ml1, .m1 { margin-left: 5px !important; }
+.mr1, .m1 { margin-right: 5px !important; }
+.mt1, .m1 { margin-top: 5px !important; }
+.mb1, .m1 { margin-bottom: 5px !important; }
+
+.ml2, .m2 { margin-left: 10px !important; }
+.mr2, .m2 { margin-right: 10px !important; }
+.mt2, .m2 { margin-top: 10px !important; }
+.mb2, .m2 { margin-bottom: 10px !important; }
+
+.ml3, .m3 { margin-left: 15px !important; }
+.mr3, .m3 { margin-right: 15px !important; }
+.mt3, .m3 { margin-top: 15px !important; }
+.mb3, .m3 { margin-bottom: 15px !important; }
+
+.mt10 { margin-top: 50px !important; }
+
+.btn-link {
+  line-height: unset;
+  height: unset;
+  padding: 0;
+  margin: 0;
+  text-transform: uppercase;
+  background: unset;
+  box-shadow: unset;
+  font-size: 14.5px;
+}
+
+.btn-link:hover {
+  background: unset;
+  box-shadow: unset;
+  color: #ffe0b2 !important; /* orange lighten-4 */
+}
+
+.btn-link:focus {
+  background: unset;
+}
 
 .brand-logo {
   left: unset !important;
@@ -25,6 +71,24 @@
 @media (max-width: 768px) {
   .desktop-only {
     display: none !important;
+  }
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+@media (max-width: 600px) {
+  .d-flex {
+    display: block;
   }
 }
 
@@ -47,33 +111,6 @@
 
 .gutter-row-2 {
   grid-row: 2;
-}
-
-nav.toolbar {
-  height: 32px;
-}
-
-nav.toolbar li {
-  height: 32px;
-}
-
-nav.toolbar a {
-  padding: 0;
-  width: 24px;
-  height: 24px;
-  vertical-align: top;
-  margin-top: 4px !important;
-  margin-left: 4px !important;
-}
-
-.btn-toolbar {
-  height: 32px !important;
-  width: 32px !important;
-  line-height: 32px !important;
-  font-size: 52px !important;
-  left: -15px !important;
-  position: relative !important;
-  top: -3px !important;
 }
 
 .console {
