SMall css refactor

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
 
     <!-- main content -->
     <div id="main-content">
+      @await RenderSectionAsync("Styles", required: false)
       @RenderBody()
     </div>
 
