--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -1,31 +1,5 @@
 ﻿@model Session
 
-<style scoped>
-  html {
-    background-color: #263238 !important; /* blue-grey darken-4 */
-  }
-
-  .material-symbols-outlined {
-    line-height: unset !important;
-    width: 36px !important;
-    position: relative;
-  }
-
-  #run > i {
-    font-size: 52px !important;
-    left: -8px;
-  }
-
-  #share > i {
-    font-size: 32px !important;
-  }
-
-  #run, #share {
-    width: 36px;
-    padding: 0;
-  }
-</style>
-
 <nav class="indigo lighten-1">
   <div class="nav-wrapper">
     <ul class="left">
@@ -54,8 +28,8 @@
 <split-grid-wrapper first-gutter-class="gutter-row-1">
   <div class="grid blue-grey darken-4">
     <div>
-      <nav class="deep-purple darken-3" style="height: 32px">
-        <h6 class="pl2 m0" style="line-height: 32px !important;">JavaScript</h6>
+      <nav id="code-title-bar" class="deep-purple darken-3">
+        <h6 class="pl2 m0">JavaScript</h6>
       </nav>
 
       <code-editor id="code-editor"></code-editor>
@@ -64,8 +38,8 @@
     <div class="gutter-row-1 gutter-row-2"></div>
 
     <div class="console">
-      <nav class="deep-purple darken-3" style="height: 27px;">
-        <h6 class="pl2 m0" style="line-height: 22px !important;">Console</h6>
+      <nav id="console-title-bar" class="deep-purple darken-3">
+        <h6 class="pl2 m0">Console</h6>
       </nav>
 
       <div id="console-output"
@@ -92,3 +66,80 @@
     M.toast({html: 'Session code copied to clipboard!'})
   }
 </script>
+
+@section Styles
+{
+  <style scoped>
+    html {
+      background-color: #263238 !important; /* blue-grey darken-4 */
+    }
+
+    .material-symbols-outlined {
+      line-height: unset !important;
+      width: 36px !important;
+      position: relative;
+    }
+
+    #code-title-bar {
+      height: 32px !important;
+    }
+
+    #code-title-bar > h6 {
+      line-height: 32px !important;
+    }
+
+    #console-title-bar {
+     height: 27px;
+    }
+
+    #console-title-bar > h6 {
+      line-height: 22px !important;
+    }
+
+    #run > i {
+      font-size: 52px !important;
+      left: -8px;
+    }
+
+    #share > i {
+      font-size: 32px !important;
+    }
+
+    #run, #share {
+      width: 36px;
+      padding: 0;
+    }
+
+    .console {
+      width:  100% !important;
+      height: calc(100% - 32px) !important;
+    }
+
+    .console > div {
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+    }
+
+    /* define grid */
+
+    .grid {
+      display: grid;
+      grid-template-rows: 1fr 5px 1fr;
+      height: calc(var(--vh, 1vh) * 100 - 128px) !important;
+    }
+
+    .gutter-row-1, .gutter-row-2 {
+      cursor: row-resize;
+      border: solid 1px #6200ea; /* purple darken-4 */
+    }
+
+    .gutter-row-1 {
+      grid-column: 1/-1;
+    }
+
+    .gutter-row-2 {
+      grid-row: 2;
+    }
+  </style>
+}
