--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -1,5 +1,11 @@
 ﻿@model Session
 
+<style scoped>
+  html {
+    background-color: #263238 !important; /* blue-grey darken-4 */
+  }
+</style>
+
 <nav class="indigo lighten-1">
   <div class="nav-wrapper">
     <ul class="left">
@@ -32,7 +38,7 @@
         <h6 class="pl2 m0">JavaScript</h6>
       </nav>
 
-      <code-editor id="code-editor"></code-editor>
+      <code-editor id="code-editor" session-code="@Model.Code"></code-editor>
     </div>
 
     <div class="gutter-row-1 gutter-row-2"></div>
@@ -66,80 +72,3 @@
     M.toast({html: 'Session code copied to clipboard!'})
   }
 </script>
-
-@section Styles
-{
-  <style scoped>
-    html {
-      background-color: #263238 !important; /* blue-grey darken-4 */
-    }
-
-    .material-symbols-outlined {
-      line-height: unset !important;
-      width: 36px !important;
-      position: relative;
-    }
-
-    #code-title-bar {
-      height: 32px !important;
-    }
-
-    #code-title-bar > h6 {
-      line-height: 32px !important;
-    }
-
-    #console-title-bar {
-     height: 27px;
-    }
-
-    #console-title-bar > h6 {
-      line-height: 22px !important;
-    }
-
-    #run > i {
-      font-size: 52px !important;
-      left: -8px;
-    }
-
-    #share > i {
-      font-size: 32px !important;
-    }
-
-    #run, #share {
-      width: 36px;
-      padding: 0;
-    }
-
-    .console {
-      width:  100% !important;
-      height: calc(100% - 32px) !important;
-    }
-
-    .console > div {
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-    }
-
-    /* define grid */
-
-    .grid {
-      display: grid;
-      grid-template-rows: 1fr 5px 1fr;
-      height: calc(var(--vh, 1vh) * 100 - 128px) !important;
-    }
-
-    .gutter-row-1, .gutter-row-2 {
-      cursor: row-resize;
-      border: solid 1px #6200ea; /* purple darken-4 */
-    }
-
-    .gutter-row-1 {
-      grid-column: 1/-1;
-    }
-
-    .gutter-row-2 {
-      grid-row: 2;
-    }
-  </style>
-}
