--- a/Views/Home/_Index.cshtml
+++ b/Views/Home/_Index.cshtml
@@ -7,7 +7,7 @@
     <a href="https://split.js.org/#/split-grid">Split-Grid</a>.
   </p>
 
-  <div class="row mt10 d-flex">
+  <div class="row d-flex" style="margin-top: 50px !important;">
     <div class="col s12 m6 d-flex flex-column">
       <div class="card blue-grey darken-1 d-flex flex-column flex-1">
         <div class="card-content white-text flex-1">
