--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,8 +24,9 @@
     <div class="navbar-fixed">
       <nav class="deep-purple darken-3">
         <div class="nav-wrapper">
-          <a href="/" hx-get="/" hx-target="#main-content" hx-push-url="true" class="brand-logo pl3">
-            <i class="material-symbols-outlined" style="float: none">terminal</i><span class="desktop-only">Tietokone IDE</span>
+          <a href="/" hx-get="/" hx-target="#main-content" hx-push-url="true"
+             class="brand-logo pl3" style="margin-left: 15px">
+            <span>Tietokone IDE</span>
           </a>
           <ul class="right">
             <li><a href="/privacy" hx-get="/privacy" hx-target="#main-content" hx-push-url="true">Privacy</a></li>
