--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -26,12 +26,16 @@
     background-color: #263238; /* #263238 blue-grey darken-4 */
   }
 
-  .console > textarea {
+  .console {
     height: calc(100% - 8px) !important;
     width: 100%;
     resize: none;
     border: none;
     overflow: auto;
+  }
+
+  .console:focus {
+    outline: none;
   }
 </style>
 
