--- a/Views/Home/_Privacy.cshtml
+++ b/Views/Home/_Privacy.cshtml
@@ -1,9 +1,21 @@
 ﻿<div class="container">
-  <h1>Privacy policy</h1>
+  <div class="row d-flex">
+    <div class="col s12 m12 d-flex flex-column">
+      <h1>Privacy policy</h1>
+    </div>
+  </div>
 
-  <p>No personal data shared with us will be given to any third party, under any circumstances.
-     Your data will also never be used by us for any purpose other than for delivering the services provided by the site.</p>
+  <div class="row d-flex">
+    <div class="col s12 m12 d-flex flex-column">
+      No personal data shared with us will be given to any third party, under any circumstances.
+      Your data will also never be used by us for any purpose other than for delivering the services provided by the site.
+    </div>
+  </div>
 
-  <p>The site engages in no ad targeting, data mining, or other activities that may compromise your privacy,
-     and we do not affiliate ourselves with any third parties that do.</p>
+  <div class="row d-flex">
+    <div class="col s12 m12 d-flex flex-column">
+      The site engages in no ad targeting, data mining, or other activities that may compromise your privacy,
+      and we do not affiliate ourselves with any third parties that do.
+    </div>
+  </div>
 </div>
