--- a/Views/Home/_Index.cshtml
+++ b/Views/Home/_Index.cshtml
@@ -1,13 +1,21 @@
 <div class="container">
-  <h1>Welcome to <strong>Tietokone IDE</strong>!</h1>
+  <div class="row d-flex">
+    <div class="col s12 m12 d-flex flex-column">
+      <h1>Welcome to <strong>Tietokone IDE</strong>!</h1>
+    </div>
+  </div>
 
-  <p>Collaborative code editor for the web. Built with <a href="https://dotnet.microsoft.com/en-us/apps/aspnet/mvc">ASP.NET MVC</a>
-    and <a href="https://htmx.org/">HTMX</a>. The design system used is <a href="https://materializecss.com/">Materialize CSS</a>,
-    and the code editor component is <a href="https://ace.c9.io/">Ace</a>. The split layout is implemented using
-    <a href="https://split.js.org/#/split-grid">Split-Grid</a>.
-  </p>
+  <div class="row d-flex">
+    <div class="col s12 m12 d-flex flex-column">
+      <p>Collaborative code editor for the web. Built with <a href="https://dotnet.microsoft.com/en-us/apps/aspnet/mvc">ASP.NET MVC</a>
+        and <a href="https://htmx.org/">HTMX</a>. The design system used is <a href="https://materializecss.com/">Materialize CSS</a>,
+        and the code editor component is <a href="https://ace.c9.io/">Ace</a>. The split layout is implemented using
+        <a href="https://split.js.org/#/split-grid">Split-Grid</a>.
+      </p>
+    </div>
+  </div>
 
-  <div class="row d-flex" style="margin-top: 50px !important;">
+  <div class="row d-flex">
     <div class="col s12 m6 d-flex flex-column">
       <div class="card blue-grey darken-1 d-flex flex-column flex-1">
         <div class="card-content white-text flex-1">
@@ -16,7 +24,7 @@
         </div>
         <div class="card-action">
           <form action="/sessions" method="POST" hx-post="/sessions" hx-target="#main-content" hx-push-url="true">
-            <button class="btn btn-link orange-text accent-2" type="submit">Create</button>
+            <button class="btn btn-primary" type="submit">Create</button>
           </form>
         </div>
       </div>
@@ -32,7 +40,7 @@
         </div>
         <div class="card-action">
           <form id="join-session" action="/sessions" method="GET" hx-get="/sessions" hx-target="#main-content" hx-push-url="true">
-            <button class="btn btn-link orange-text accent-2" type="submit">Join</button>
+            <button class="btn btn-primary" type="submit">Join</button>
           </form>
         </div>
       </div>
