--- a/Views/Home/_Index.cshtml
+++ b/Views/Home/_Index.cshtml
@@ -17,8 +17,8 @@
 
   <div class="row d-flex">
     <div class="col s12 m6 d-flex flex-column">
-      <div class="card blue-grey darken-1 d-flex flex-column flex-1">
-        <div class="card-content white-text flex-1">
+      <div class="card d-flex flex-column flex-1">
+        <div class="card-content flex-1">
           <span class="card-title">Create session</span>
           <p>This will create a new session, with a unique ID, that others can join.</p>
         </div>
@@ -30,8 +30,8 @@
       </div>
     </div>
     <div class="col s12 m6 d-flex flex-column">
-      <div class="card blue-grey darken-1 d-flex flex-column flex-1">
-        <div class="card-content white-text flex-1">
+      <div class="card d-flex flex-column flex-1">
+        <div class="card-content flex-1">
           <span class="card-title">Join existing session</span>
           <p>Please enter the code for the session you wish to join.</p>
           <div class="input-field">
