--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,12 +17,28 @@
 
     <!-- custom CSS -->
     <link rel="stylesheet" href="~/dist/styles.css" asp-append-version="true" />
+
+    <!-- initialise dark mode (do this first to avoid 'flashing') -->
+    <script>
+      if (localStorage.getItem('darkMode')) {
+        const html = document.querySelector('html');
+        html.classList.add('dark');
+      }
+
+      document.addEventListener('DOMContentLoaded', () => {
+        if (localStorage.getItem('darkMode')) {
+          document.querySelector('.switch input').checked = true;
+        }
+
+        document.querySelector('.switch').style.display = 'unset'; // only show it once its state is correct, to avoid animations
+      });
+    </script>
   </head>
 
-  <body class="black white-text">
+  <body>
     <!-- navbar -->
     <div class="navbar-fixed">
-      <nav class="deep-purple darken-3">
+      <nav>
         <div class="nav-wrapper">
           <a href="/" hx-get="/" hx-target="#main-content" hx-push-url="true"
              class="brand-logo pl3" style="margin-left: 15px">
@@ -30,6 +46,13 @@
           </a>
           <ul class="right">
             <li><a href="/privacy" hx-get="/privacy" hx-target="#main-content" hx-push-url="true">Privacy</a></li>
+            <li class="switch" style="display: none">
+              <label class="white-text" style="position: relative; top: -1px">
+                Dark mode
+                <input type="checkbox" onclick="toggleDarkMode(event)">
+                <span class="lever" style="margin-left: 6px; top: -1px"></span>
+              </label>
+            </li>
           </ul>
         </div>
       </nav>
@@ -46,5 +69,21 @@
 
     <!-- custom js -->
     <script defer type="module" src="~/dist/main.js" asp-append-version="true"></script>
+
+    <!-- dark mode -->
+    <script>
+      function toggleDarkMode(e) {
+        const html = document.querySelector('html');
+        if (e.target.checked) {
+          localStorage.setItem('darkMode', 'true');
+          html.classList.add('dark');
+        } else {
+          localStorage.removeItem('darkMode');
+          html.classList.remove('dark');
+        }
+
+        document.dispatchEvent(new CustomEvent('darkModeToggled', { detail: { darkMode: e.target.checked } }));
+      }
+    </script>
   </body>
 </html>
