--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -30,3 +30,54 @@
   line-height: unset !important;
   position: relative;
 }
+
+html {
+  &.dark {
+    background-color: #202123;
+    color: #fff;
+
+    nav {
+      background-color: #26A69A;
+    }
+
+    .card {
+      background-color: rgba(255,255,255,0.2);
+    }
+
+    .btn,
+    span.lever::after {
+      background-color: #EE6F73 !important;
+    }
+
+    .divider {
+      opacity: 0.2;
+    }
+
+    .sidenav {
+      background-color: #2D2D31;
+      li {
+        a {
+          &:not(.subheader){
+            color: #89B2F5;
+            &:hover {
+              background-color: #3B4043;
+            }
+          }
+          &.subheader {
+            color:#9AA0A6;
+          }
+          .material-icons {
+            color: #9AA0A6;
+          }
+        }
+      }
+    }
+    .collection {
+      border: 1px solid rgba(255,255,255,0.2);
+      .collection-item {
+        background-color: rgba(255,255,255,0.2);
+        border-bottom: 1px solid rgba(255,255,255,0.2);;
+      }
+    }
+  }
+}
