--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -10,7 +10,8 @@
 
   .gutter-row-1, .gutter-row-2 {
     cursor: row-resize;
-    border: solid 1px #e57373; /* red lighten-2 */
+    border: solid 1px #64b5f6; /* blue lighten-2 */
+    background-color: #64b5f6;
   }
 
   .gutter-row-1 {
@@ -27,31 +28,32 @@
 
     &.dark {
       .gutter-row-1, .gutter-row-2 {
-        border: solid 1px #4db6ac; /* teal lighten-2 */
+        border: solid 1px #1976d2; /* blue darken-2 */
+        background-color: #1976d2;
       }
 
-      background-color: #263238 !important; /* #263238 blue-grey darken-4 */
+      background-color: #212121 !important; /* grey darken-4 */
 
       .toolbar {
-        background-color: #80cbc4 !important; /* teal lighten-3 */
+        background-color: #616161 !important; /* grey darken-2 */
       }
 
       .console {
-        padding-left: 15px;
-        padding-right: 15px;
         color: #ffffff !important; /* white */
-        background-color: #263238 !important; /* #263238 blue-grey darken-4 */
+        background-color: #212121 !important; /* grey darken-4 */
       }
     }
   }
 
   .toolbar {
-    background-color: #ef9a9a !important; /* red lighten-3 */
+    background-color: #64b5f6 !important; /* blue lighten-2 */
   }
 
   .console {
     height: calc(100% - 8px) !important;
     width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
     resize: none;
     border: none;
     overflow: auto;
