Minor UI fixes for mobile

--- a/Views/Home/_Index.cshtml
+++ b/Views/Home/_Index.cshtml
@@ -18,11 +18,11 @@
   <div class="row d-flex">
     <div class="col s12 m6 d-flex flex-column">
       <div class="card d-flex flex-column flex-1">
-        <div class="card-content flex-1">
+        <div class="card-content flex-1" style="min-height: 165px">
           <span class="card-title">Create session</span>
           <p>This will create a new session, with a unique ID, that others can join.</p>
           <div class="input-field switch">
-            <label class="white-text">
+            <label>
               Enable code execution
               <input type="checkbox" name="enableCodeExecution" value="true" checked form="new-session" />
               <span class="lever" style="margin-left: 6px; top: -1px"></span>
