Small UI improvements

--- a/Views/Home/_Index.cshtml
+++ b/Views/Home/_Index.cshtml
@@ -1,17 +1,9 @@
 <div class="container">
   <div class="row d-flex">
-    <div class="col s12 m12 d-flex flex-column">
+    <div class="col s12">
       <h1>Welcome to <strong>Tietokone IDE</strong>!</h1>
-    </div>
-  </div>
-
-  <div class="row d-flex">
-    <div class="col s12 m12 d-flex flex-column">
-      <p>Collaborative code editor for the web. Built with <a href="https://dotnet.microsoft.com/en-us/apps/aspnet/mvc">ASP.NET MVC</a>
-        and <a href="https://htmx.org/">HTMX</a>. The design system used is <a href="https://materializecss.com/">Materialize CSS</a>,
-        and the code editor component is <a href="https://ace.c9.io/">Ace</a>. The split layout is implemented using
-        <a href="https://split.js.org/#/split-grid">Split-Grid</a>.
-      </p>
+      <h5 style="margin-bottom: 1.68rem">Collaborative code editor for the web</h5>
+      <hr />
     </div>
   </div>
 
