--- a/Views/Home/_Privacy.cshtml
+++ b/Views/Home/_Privacy.cshtml
@@ -1,7 +1,8 @@
 ﻿<div class="container">
   <div class="row d-flex">
-    <div class="col s12 m12 d-flex flex-column">
+    <div class="col s12">
       <h1>Privacy policy</h1>
+      <hr />
     </div>
   </div>
 
