--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -1,28 +1,6 @@
 ﻿@model Session
 
 <style>
-  /* grid layout */
-  .grid {
-    display: grid;
-    grid-template-rows: @(Model?.EnableCodeExecution == true ? "1fr 5px 1fr" : "1fr");
-    height: calc(var(--vh, 1vh) * 100 - 128px) !important;
-  }
-
-  .gutter-row-1, .gutter-row-2 {
-    cursor: row-resize;
-    border: solid 1px #64b5f6; /* blue lighten-2 */
-    background-color: #64b5f6;
-  }
-
-  .gutter-row-1 {
-    grid-column: 1/-1;
-  }
-
-  .gutter-row-2 {
-    grid-row: 2;
-  }
-
-  /* general layout overrides */
   html {
     background-color: white !important;
 
@@ -40,7 +18,7 @@
 
       .console {
         color: #ffffff !important; /* white */
-        background-color: #212121 !important; /* grey darken-4 */
+        background-color: #272822 !important;
       }
     }
   }
