Fix scrollbar issue

--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -28,8 +28,8 @@
   }
 
   .console {
-    height: calc(100% - 8px) !important;
-    width: 100%;
+    height: calc(100% - 12px) !important;
+    width: calc(100% - 32px) !important;
     padding-left: 15px;
     padding-right: 15px;
     resize: none;
