--- a/Views/Editor/_Editor.cshtml
+++ b/Views/Editor/_Editor.cshtml
@@ -4,13 +4,24 @@
   html {
     background-color: white !important;
 
+    vaadin-split-layout::part(splitter) {
+      background-color: #64b5f6 !important;
+    }
+
+    vaadin-split-layout::part(handle)::after {
+      background-color: #1976d2 !important; /* blue darken-2 */
+    }
+
     &.dark {
-      .gutter-row-1, .gutter-row-2 {
-        border: solid 1px #1976d2; /* blue darken-2 */
-        background-color: #1976d2;
+      background-color: #212121 !important; /* grey darken-4 */
+
+      vaadin-split-layout::part(splitter) {
+        background-color: #1976d2 !important;
       }
 
-      background-color: #212121 !important; /* grey darken-4 */
+      vaadin-split-layout::part(handle)::after {
+        background-color: #0d47a1 !important; /* blue darken-4 */
+      }
 
       .toolbar {
         background-color: #616161 !important; /* grey darken-2 */
