--- a/Views/Home/_Privacy.cshtml
+++ b/Views/Home/_Privacy.cshtml
@@ -1,8 +1,8 @@
-﻿<div class="container">
+<div class="container">
   <div class="row d-flex">
     <div class="col s12">
       <h1>Privacy policy</h1>
-      <hr />
+     <hr />
     </div>
   </div>
 
