Moar UX improvements

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>tietokone.io | IDE</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
 
     <!-- HTMX -->
     <script defer src="https://unpkg.com/htmx.org@2.0.4"></script>
@@ -31,7 +32,7 @@
         <div class="nav-wrapper">
           <a href="/" hx-get="/" hx-target="#main-content" hx-push-url="true"
              class="brand-logo pl3" style="margin-left: 15px">
-            <i class="material-icons">code</i>
+            <i class="material-icons">code</i><span class="desktop-only">Tietokone IDE</span>
           </a>
           <ul class="right">
             <li>
